# DBT-Search-Agent

./: .gitignore  Dockerfile  Dockerfile.actions  README.md  app.py  docker-compose.yml  pyproject.toml  slack_integration.py  slack_lambda_test.py
chatdbt_raw_data/: dbt_project.yml
dbt_env/: pyvenv.cfg
models/: customer.sql  customer_feedback.sql  employees.sql  inventory.sql  orders.sql  products.sql  regions.sql  sales.sql  schema.yml  shipping.sql  suppliers.sql
src/: constants.py  llm_agent.py  main.py  nlp_layer.py  utils.py
src/actions/: dbt_actions.py
src/bot/: bot_handler.py
src/config/: config_handler.py
src/deployment_script/: slack_integration.py
src/test/: dbt_api_connection.ipynb  test_dbt_connection.py
src/test/.ipynb_checkpoints/: dbt_api_connection-checkpoint.ipynb
