[tool.poetry]
name = "dbt-search-agent"
version = "0.1.0"
description = ""
authors = ["Matteo Gevi <matteogevi97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.39.0"
requests = "^2.32.3"
pandas = "^2.2.3"
slack-sdk = "^3.33.3"
flask = "^3.0.3"
dbt-core = "^1.8.8"
dbt-postgres = "^1.8.2"
ngrok = "^1.4.0"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
